--- a/vcodetextview/src/main/res/drawable/bg_focus.xml
+++ b/vcodetextview/src/main/res/drawable/bg_focus.xml
@@ -4,7 +4,7 @@
 
     <solid android:color="@color/white"/>
 
-    <stroke android:color="@android:color/holo_blue_dark"
-        android:width="1dp"/>
+    <stroke android:color="@android:color/holo_orange_light"
+        android:width="2dp"/>
 
 </shape>
