--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -9,14 +9,15 @@
     <com.yizhixionga.textview.VerificationCodeView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        app:vCodeBackgroundFocus="@drawable/bg_focus"
-        app:vCodeBackgroundNormal="@drawable/bg_normal"
+        app:vCodeBackgroundFocus="@drawable/focus"
+        app:vCodeBackgroundNormal="@drawable/normal"
         app:vCodeDataLength="6"
         app:vCodeHeight="60dp"
         app:vCodeMargin="5dp"
         app:vCodeTextColor="@color/black"
         app:vCodeTextSize="30sp"
         app:vCodeWidth="60dp"
+        app:vCodeTextBold ="true"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
