--- a/vcodetextview/src/main/res/drawable/bg_focus.xml
+++ b/vcodetextview/src/main/res/drawable/bg_focus.xml
@@ -2,7 +2,7 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="rectangle">
 
-    <solid android:color="@color/white"/>
+    <solid android:color="@android:color/white"/>
 
     <stroke android:color="@android:color/holo_orange_light"
         android:width="2dp"/>
